# task_virtual_fixtures

task_virtual_fixtures/: README.md  license.txt
task_virtual_fixtures/tvf_construction/: CMakeLists.txt  package.xml
task_virtual_fixtures/tvf_construction/include/: pcn_layers.h  stl_parser.h  stl_pcn.h  tvf_graph.h
task_virtual_fixtures/tvf_construction/launch/: batch_tvf_construction.launch  load_cloud_normals.launch  parametric_tvf_construction.launch  tvf_construction.launch
task_virtual_fixtures/tvf_construction/src/: batch_stl_normals_test.cpp  batch_tvf_construction_node.cpp  cloud_normals_viewer_node.cpp  image_analysis.py  parametric_stl_normals_test.cpp  parametric_tvf_construction_node.cpp  pcn_layers.cpp  stl_parser.cpp  stl_pcn.cpp  tvf_construction_node.cpp  tvf_graph.cpp
tvf_interactive/: README.md
tvf_interactive/tvf_interactive/: CMakeLists.txt  package.xml
tvf_interactive/tvf_interactive/include/: tvf_graph_imarker.h
tvf_interactive/tvf_interactive/src/: interpolation_voxel.cpp  tvf_graph_imarker.cpp  tvf_graph_imarker_node.cpp
tvf_interactive/tvf_interactive_demos/: CMakeLists.txt  package.xml
tvf_interactive/tvf_interactive_demos/config/: imarker_config.rviz
tvf_interactive/tvf_interactive_demos/launch/: ar_sim_info.yaml  imarkers.launch  imarkers_parametric.launch  irb2600_simulation_imarkers.launch  irb2600_simulation_imarkers_parametric.launch  sia20_simulation_imarkers.launch  sia20_simulation_imarkers_parametric.launch
tvf_interactive/tvf_nav_descartes/: CMakeLists.txt  package.xml
tvf_interactive/tvf_nav_descartes/action/: TVFNavDescartes.action
tvf_interactive/tvf_nav_descartes/include/tvf_nav_descartes/: tvf_nav_descartes.h
tvf_interactive/tvf_nav_descartes/src/: plan_d_path.cpp  tvf_nav_descartes.cpp
tvf_shape_primitive/: README.md  license.txt
tvf_shape_primitive/sia20_demos/: CMakeLists.txt  package.xml
tvf_shape_primitive/sia20_demos/launch/: ar_sim.launch  ar_sim_info.yaml  ar_sim_info_barrel.yaml  ar_sim_info_hybrid.yaml  ar_sim_info_pipe.yaml  ar_sim_info_wall.yaml  sia20_simulation.launch
tvf_shape_primitive/tvf_shape_primitive/: CMakeLists.txt  package.xml  setup.py
tvf_shape_primitive/tvf_shape_primitive/action/: SurfaceVF.action
tvf_shape_primitive/tvf_shape_primitive/launch/: vf demo commands  vf_demo.launch
tvf_shape_primitive/tvf_shape_primitive/scripts/: __init__.py  test.py
tvf_shape_primitive/tvf_shape_primitive/src/vf_construction/: SurfaceVFClient.py  SurfaceVFGenerator.py  SurfaceVFServer.py
tvf_shape_primitive/vf_frames/: CMakeLists.txt  package.xml  setup.py
tvf_shape_primitive/vf_frames/include/: ar_scene_loader.h
tvf_shape_primitive/vf_frames/launch/: ar_frame_surface_collision.launch
tvf_shape_primitive/vf_frames/src/: ar_scene_loader.cpp
tvf_shape_primitive/vf_frames/src/vf_frames/: ARFrameLoader.py  ARSceneLoader.py  SurfaceCollisionLoader.py  SurfaceFrameLoader.py  SurfaceInspectionLoader.py
tvf_shape_primitive/vf_nav/: CMakeLists.txt  package.xml  plugin_description.xml  setup.py
tvf_shape_primitive/vf_nav/action/: VFNav.action
tvf_shape_primitive/vf_nav/config/: demo_config.rviz  imarker_config.rviz
tvf_shape_primitive/vf_nav/include/vf_nav_rviz/: vf_nav_rviz.hpp
tvf_shape_primitive/vf_nav/launch/: rviz_motion_command.launch  vf_nav_client.launch
tvf_shape_primitive/vf_nav/src/vf_nav/: VFNavClient.py  VFNavServer.py  VFNavigation.py  VFNavigationFile.py
