<?xml version="1.0"?>
<package>
  <name>tvf_interactive</name>
  <version>1.0.2</version>
  <description>
      Package for constructing VFs from surface normals and using VFs from detected environmental AR tags
  </description>

  <license>BSD</license>
  <author email="asharp@utexas.edu">Andrew Sharp</author>
  <maintainer email="asharp@utexas.edu">Andrew Sharp</maintainer>
  <url type="website">http://robotics.me.utexas.edu</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>rviz_visual_tools</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>tvf_construction</build_depend>
  <build_depend>tvf_nav_descartes</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>rviz_visual_tools</run_depend>
  <run_depend>tvf_construction</run_depend>
  <run_depend>tvf_nav_descartes</run_depend>

</package>
