<package>
  <name>vf_nav</name>
  <version>1.0.0</version>
  <description>
      package for sending motion commands through various methods
  </description>

  <license>BSD</license>
  <author>Andrew Sharp</author>
  <author email="asharp@utexas.edu">Andrew Sharp</author>
  <maintainer email="asharp@utexas.edu">Andrew Sharp</maintainer>
  <url type="website">http://robotics.me.utexas.edu</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <export><rviz plugin="${prefix}/plugin_description.xml"/></export>
</package>
